# sync-jira-actions

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  action.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  taplo.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code-ql.yml  dangerjs.yml  pre-commit.yml  python-test.yml  stale.yml  sync-jira.yml
sync_jira_actions/: sync_issue.py  sync_pr.py  sync_to_jira.py
tests/: test_sync_to_jira.py
