[project]
    authors = [{ name = "Espressif Systems" }, { name = "Tomas Sebestik", email = "tomas.sebestik@espressif.com" }]
    classifiers = [
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
    description = "Espressif GitHub Actions for JIRA synchronization"
    dynamic = ["version"]
    license = { text = "Apache 2.0" }
    name = "sync-jira-actions"
    readme = "README.md"
    requires-python = ">=3.11"
    urls.Changelog = "https://github.com/espressif/sync-jira-actions/tags/blob/master/CHANGELOG.md"
    urls.Homepage = "https://github.com/espressif/sync-jira-actions/tags"
    urls.Source = "https://github.com/espressif/sync-jira-actions/tags"
    urls.Tracker = "https://github.com/espressif/sync-jira-actions/tags/issues"

    dependencies              = ["PyGithub==2.2.0", "jira==3.6.0"]
    optional-dependencies.dev = ["czespressif", "just-bin~=1.26.0", "pip-tools~=7.3", "pre-commit>=3.3", "pytest", "pytest-cov"]

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=64"]

[tool]
    [tool.setuptools]
        dynamic.version       = { attr = "sync_jira_actions.__init__.__version__" }
        packages.find.exclude = ["node_modules", "tests"]
        packages.find.include = ["sync_jira_actions"]

    [tool.codespell]
        skip = "tests"

    [tool.ruff]
        extend-exclude                 = ["tests/"]
        format.quote-style             = "single"
        line-length                    = 120
        lint.ignore                    = ["S603", "S607"]
        lint.isort.force-single-line   = true
        lint.isort.lines-between-types = 1
        lint.select                    = ["B", "C4", "C901", "E", "F", "I", "N", "PL", "S", "UP", "W"]

    [tool.mypy]
        disallow_incomplete_defs = true
        disallow_untyped_defs    = false
        exclude                  = ["^__init__.py$", "^build/.*", "^dist/.*", "^docs/.*", "^tests/.*"]
        ignore_missing_imports   = true
        packages                 = "sample_python_app"
        pretty                   = true
        python_version           = "3.11"
        warn_return_any          = true

    [tool.commitizen]
        annotated_tag              = true
        bump_message               = 'change(bump): [skip-ci] release $current_version → $new_version'
        changelog_merge_prerelease = true
        name                       = "czespressif"
        tag_format                 = "v$version"
        update_changelog_on_bump   = true
        version                    = "0.1.1"
        version_files              = ["sync_jira_actions/__init__.py"]
        version_provider           = "commitizen"

    [tool.yamlfix]
        comments_min_spaces_from_content = 1
        line_length                      = 200
        preserve_quotes                  = true
        section_whitelines               = 1
        sequence_style                   = "keep_style"
        whitelines                       = 1

    [tool.pytest]
        ini_options.addopts   = "-s --log-cli-level DEBUG --cov=. --cov-report=term"
        ini_options.testpaths = "tests"

    [tool.coverage]
        run.branch   = true
        run.parallel = true
        run.source   = ["sample_python_app"]
